# Telperion

./: .gitignore  pyproject.toml
notebooks/: 1-Test_HeartWood.ipynb  2-Test_SapWood.ipynb  3-Test_SapWood_RealData.ipynb
telperion/: HeartWood.py  Lothlorien.py  Mallorn.py  SapWood.py  __init__.py  utils.py
tests/: test_hw.py  test_ll.py  test_ml.py
