[tool.poetry]
name = "telperion"
version = "0.1.0"
description = ""
authors = ["JNSFilipe <jose.filipe@ieee.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
scikit-learn = "^1.3.1"
skorch = "^0.15.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
